// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EditInPlace > renders 1`] = `
<DocumentFragment>
  <form
    class="_root_dc87d2 _container_980156"
  >
    <div
      class="_field_dc87d2"
    >
      <label
        class="_label_dc87d2"
        for="radix-:r0:"
      >
        Edit Me
      </label>
      <div
        class="_controls_980156"
      >
        <input
          class="_control_a839aa"
          id="radix-:r0:"
          name="input"
          title=""
          value=""
        />
        <div
          class="_button-group_980156"
        >
          <button
            aria-label="Save"
            class="_button_980156 _primary-button_980156"
            type="submit"
          >
            <svg
              class="cpd-icon"
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.55 17.575c-.133 0-.258-.02-.375-.063a.878.878 0 0 1-.325-.212L4.55 13c-.183-.183-.27-.42-.263-.713.009-.291.105-.529.288-.712a.948.948 0 0 1 .7-.275.95.95 0 0 1 .7.275L9.55 15.15l8.475-8.475c.183-.183.42-.275.712-.275s.53.092.713.275c.183.183.275.42.275.712s-.092.53-.275.713l-9.2 9.2c-.1.1-.208.17-.325.212a1.106 1.106 0 0 1-.375.063Z"
              />
            </svg>
          </button>
          <button
            aria-label="Cancel"
            class="_button_980156"
            role="button"
            type="reset"
          >
            <svg
              class="cpd-icon"
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.293 6.293a1 1 0 0 1 1.414 0L12 10.586l4.293-4.293a1 1 0 1 1 1.414 1.414L13.414 12l4.293 4.293a1 1 0 0 1-1.414 1.414L12 13.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L10.586 12 6.293 7.707a1 1 0 0 1 0-1.414Z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`EditInPlace > renders error icon and text if error provided 1`] = `
<DocumentFragment>
  <form
    class="_root_dc87d2 _container_980156"
  >
    <div
      class="_field_dc87d2"
      data-invalid="true"
    >
      <label
        class="_label_dc87d2"
        data-invalid="true"
        for="radix-:rr:"
      >
        Edit Me
      </label>
      <div
        class="_controls_980156"
      >
        <input
          aria-describedby="radix-:r14:"
          aria-invalid="true"
          class="_control_a839aa"
          data-invalid="true"
          id="radix-:rr:"
          name="input"
          title=""
          value=""
        />
        <div
          class="_button-group_980156"
        >
          <button
            aria-label="Save"
            class="_button_980156 _primary-button_980156"
            type="submit"
          >
            <svg
              class="cpd-icon"
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.55 17.575c-.133 0-.258-.02-.375-.063a.878.878 0 0 1-.325-.212L4.55 13c-.183-.183-.27-.42-.263-.713.009-.291.105-.529.288-.712a.948.948 0 0 1 .7-.275.95.95 0 0 1 .7.275L9.55 15.15l8.475-8.475c.183-.183.42-.275.712-.275s.53.092.713.275c.183.183.275.42.275.712s-.092.53-.275.713l-9.2 9.2c-.1.1-.208.17-.325.212a1.106 1.106 0 0 1-.375.063Z"
              />
            </svg>
          </button>
          <button
            aria-label="Cancel"
            class="_button_980156"
            role="button"
            type="reset"
          >
            <svg
              class="cpd-icon"
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.293 6.293a1 1 0 0 1 1.414 0L12 10.586l4.293-4.293a1 1 0 1 1 1.414 1.414L13.414 12l4.293 4.293a1 1 0 0 1-1.414 1.414L12 13.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L10.586 12 6.293 7.707a1 1 0 0 1 0-1.414Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <span
        class="_message_dc87d2 _error-message_dc87d2"
        id="radix-:r14:"
      >
        <svg
          class="cpd-icon"
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 17a.97.97 0 0 0 .713-.288A.968.968 0 0 0 13 16a.968.968 0 0 0-.287-.713A.968.968 0 0 0 12 15a.968.968 0 0 0-.713.287A.968.968 0 0 0 11 16c0 .283.096.52.287.712.192.192.43.288.713.288Zm0-4c.283 0 .52-.096.713-.287A.968.968 0 0 0 13 12V8a.967.967 0 0 0-.287-.713A.968.968 0 0 0 12 7a.968.968 0 0 0-.713.287A.967.967 0 0 0 11 8v4c0 .283.096.52.287.713.192.191.43.287.713.287Zm0 9a9.738 9.738 0 0 1-3.9-.788 10.099 10.099 0 0 1-3.175-2.137c-.9-.9-1.612-1.958-2.137-3.175A9.738 9.738 0 0 1 2 12a9.74 9.74 0 0 1 .788-3.9 10.099 10.099 0 0 1 2.137-3.175c.9-.9 1.958-1.612 3.175-2.137A9.738 9.738 0 0 1 12 2a9.74 9.74 0 0 1 3.9.788 10.098 10.098 0 0 1 3.175 2.137c.9.9 1.613 1.958 2.137 3.175A9.738 9.738 0 0 1 22 12a9.738 9.738 0 0 1-.788 3.9 10.098 10.098 0 0 1-2.137 3.175c-.9.9-1.958 1.613-3.175 2.137A9.738 9.738 0 0 1 12 22Z"
          />
        </svg>
        Missing Left Falangey
      </span>
    </div>
  </form>
</DocumentFragment>
`;

exports[`EditInPlace > should disable save button if told to 1`] = `
<DocumentFragment>
  <form
    class="_root_dc87d2 _container_980156"
  >
    <div
      class="_field_dc87d2"
    >
      <label
        class="_label_dc87d2"
        for="radix-:r15:"
      >
        Edit Me
      </label>
      <div
        class="_controls_980156"
      >
        <input
          class="_control_a839aa"
          id="radix-:r15:"
          name="input"
          title=""
          value=""
        />
        <div
          class="_button-group_980156"
        >
          <button
            aria-label="Save"
            class="_button_980156 _primary-button_980156 _primary-button-disabled_980156"
            disabled=""
            type="submit"
          >
            <svg
              class="cpd-icon"
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.55 17.575c-.133 0-.258-.02-.375-.063a.878.878 0 0 1-.325-.212L4.55 13c-.183-.183-.27-.42-.263-.713.009-.291.105-.529.288-.712a.948.948 0 0 1 .7-.275.95.95 0 0 1 .7.275L9.55 15.15l8.475-8.475c.183-.183.42-.275.712-.275s.53.092.713.275c.183.183.275.42.275.712s-.092.53-.275.713l-9.2 9.2c-.1.1-.208.17-.325.212a1.106 1.106 0 0 1-.375.063Z"
              />
            </svg>
          </button>
          <button
            aria-label="Cancel"
            class="_button_980156"
            role="button"
            type="reset"
          >
            <svg
              class="cpd-icon"
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.293 6.293a1 1 0 0 1 1.414 0L12 10.586l4.293-4.293a1 1 0 1 1 1.414 1.414L13.414 12l4.293 4.293a1 1 0 0 1-1.414 1.414L12 13.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L10.586 12 6.293 7.707a1 1 0 0 1 0-1.414Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <span
        class="_caption-line_980156 _caption-text_980156 _caption-text-help_980156"
      >
        Help message
      </span>
    </div>
  </form>
</DocumentFragment>
`;
